@@ -212,6 +212,9 @@
       <setting name="WriteTagFile" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="ShutdownAfterCompleteBatchJob" serializeAs="String">
+        <value>False</value>
+      </setting>
     </DanbooruDownloader3.Properties.Settings>
   </userSettings>
   <log4net>
